# nix-polyglot

./: .gitignore  .pre-commit-config.yaml  BUILD_REQUIREMENTS.md  LANGUAGE_SUPPORT.md  README.md  TESTING_GUIDE.md  TODO.md  cpp.nix  csharp.nix  flake.nix  go.nix  nim.nix  python.nix  rust.nix  test-all.sh  test-main-flake.sh  test-project-user.sh  test-quick.sh  zig.nix
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  FAQ.md  README.md  TEMPLATE_FORMATTING.md  USER_GUIDE.md
docs/examples/: README.md
docs/future/: 01-cross-compilation.md  02-language-extensions.md  README.md
lib/: README.md  build-hooks.nix  nim.nix  scripts.nix  standard-tools.nix  templates.nix
scripts/: format-templates.sh
src/glot/: go.mod  main.go
templates/: justfile-template
templates/cpp/cpp-cli/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  flake.nix  template.nix
templates/cpp/cpp-cli/include/: hello.hpp
templates/cpp/cpp-cli/src/: hello.cpp  main.cpp
templates/cpp/cpp-cli/tests/: CMakeLists.txt  test_hello.cpp
templates/csharp/console/: .editorconfig  .envrc  .gitignore  MyApp.csproj  Program.cs  deps.json  flake.nix  generate-deps.py  justfile  template.nix
templates/go/cli/: .editorconfig  .gitignore  flake.nix  go.mod  main.go  main_test.go  template.nix
templates/nim/cli/: .editorconfig  .envrc  .gitignore  config.nims  flake.nix  nim_project.nimble  template.nix
templates/python/console/: .editorconfig  .gitignore  README.md  flake.nix  justfile  pyproject.toml  template.nix
templates/python/console/myapp/: __init__.py  main.py
templates/python/console/tests/: __init__.py  test_main.py
templates/rust/cli/: .editorconfig  .envrc  .gitignore  Cargo.toml  flake.nix  justfile  template.nix
templates/zig/cli/: .editorconfig  .gitignore  build.zig  flake.nix  template.nix
(+8 files in other folders)
